--- a/styles.css
+++ b/styles.css
@@ -297,29 +297,41 @@ section {
     margin-bottom: 3rem;
 }
 
-.contact-info {
+.contact form {
     max-width: 70rem;
-    margin: 0 auto;
+    margin: 1rem auto;
     text-align: center;
+    margin-bottom: 3rem;
 }
 
-.contact-info h3 {
-    font-size: 2.4rem;
-    margin-bottom: 1rem;
+.contact form .input-box {
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
 }
 
-.contact-info p {
+.contact form .input-box input,
+.contact form textarea {
+    width: 100%;
+    padding: 1.5rem;
     font-size: 1.6rem;
-    margin-bottom: 1rem;
+    color: var(--text-color);
+    background: var(--second-bg-color);
+    border-radius: .8rem;
+    margin: .7rem 0;
 }
 
-.contact-info a {
-    color: var(--main-color);
-    transition: .3s;
+.contact form .input-box input {
+    width: 49%;
 }
 
-.contact-info a:hover {
-    text-decoration: underline;
+.contact form textarea {
+    resize: none;
+}
+
+.contact form .btn {
+    margin-top: 2rem;
+    cursor: pointer;
 }
 
 .footer {
@@ -360,80 +372,5 @@ section {
 
     .footer {
         padding: 2rem 3%;
-    }
-}
-
-@media (max-width: 768px) {
-    .home {
-        flex-direction: column;
-    }
-
-    .home-content h3 {
-        font-size: 2.6rem;
-    }
-
-    .home-content h1 {
-        font-size: 5rem;
-    }
-
-    .home-img img {
-        width: 70vw;
-        margin-top: 4rem;
-    }
-
-    .about {
-        flex-direction: column-reverse;
-    }
-
-    .about img {
-        width: 70vw;
-        margin-top: 4rem;
-    }
-
-    .projects h2 {
-        margin-bottom: 3rem;
-    }
-
-    .projects-container {
-        grid-template-columns: repeat(2, 1fr);
-    }
-}
-
-@media (max-width: 617px) {
-    .projects-container {
-        grid-template-columns: 1fr;
-    }
-}
-
-@media (max-width: 450px) {
-    html {
-        font-size: 50%;
-    }
-
-    .contact-info h3 {
-        font-size: 2.2rem;
-    }
-
-    .contact-info p {
-        font-size: 1.5rem;
-    }
-}
-
-@media (max-width: 365px) {
-    .home-img img {
-        width: 90vw;
-    }
-
-    .about-img img {
-        width: 90vw;
-    }
-
-    .footer {
-        flex-direction: column-reverse;
-    }
-
-    .footer p {
-        text-align: center;
-        margin-top: 2rem;
     }
 }
